--- a/package.yml
+++ b/package.yml
@@ -3,4 +3,4 @@ author: pretorien
 category: Forms
 tags: [color, picker, colorpicker]
 docs: https://github.com/pretorien/mootools-colorpicker
-current: 1.0
+current: v1.0
